--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,4 +1,4 @@
 claro_message_bundle:
     resource: "@ClarolineMessageBundle/Controller/"
+    prefix:   message
     type:     annotation
-    prefix:   /
